apps/wontlost/ckeditor-builder/namespace.yaml
# CKEditor Builder Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: wontlost-ckeditor-builder
  labels:
    app.kubernetes.io/part-of: wontlost
